# project_jumpy_tanx

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
script/: COMPILE_RUN.sh  build.bat  build.sh  zip.sh
shaders/: add.frag  bloom.frag  blur.frag  blur_horizontal.frag  blur_vertical.frag  bright.frag  main.frag  main.vert  post_main.vert  post_two.vert  text.frag  text.vert
src/: Camera.h  Debug.h  Enemy.h  Explosions.h  FBO.h  JoinedPoints.h  Lights.h  Material.h  ModelRef.h  ObjModel.h  Particles.h  Postprocess.h  Program.h  Projectiles.h  RandGen.h  ShaderLoc.h  Tank.h  TankMatrix.h  Terrain.h  TerrainModel.h  TextRenderer.h  Texture.h  ThingMatrix.h  Trees.h  application.cpp  application.hpp  main.cpp
src/utils/: mesh.hpp  utils.hpp
